[package]
name = "vipera"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "simple configuration file crate, but it works."
repository = "https://github.com/levinion/vipera"
keywords = ["config", "configuration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
toml = "0.8.12"
