[package]
name = "vipera"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["levinion <levinnion@gmail.com>"]
description = "simple configuration file crate, it just works."
repository = "https://github.com/levinion/vipera"
documentation = "https://docs.rs/vipera"
keywords = ["config", "configuration"]

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
serde_yml = { version = "0.0.12", optional = true }
shellexpand = { version = "3.1.2", features = ["full"] }
toml = { version = "1.0.3", optional = true }

[features]
default = ["toml", "yaml", "json"]
toml = ["dep:toml"]
yaml = ["dep:serde_yml"]
json = ["dep:serde_json"]
